# graph-sparsification

./: .gitignore  CMakeLists.txt  MBCalculationAlgorithm.h  MBClassicAlgorithm.cpp  MBClassicAlgorithm.h  MBFast.cpp  MBFast.h  MetricBackbone.cpp  MetricBackbone.h  MetricBackboneFast.cpp  README.md  gen_abcd.cpp  input_gen.py  temp.py  trial_graph_gen.py  wrong.txt
Datasets/: USairport500-uniform.txt  openflights-uniform.txt
old/: approx.py  clustering.py  community_experiments_plots.py  datasets.py  graph_builder.py  metric_backbone.py  metrics.py  plots.py
output/MB_Datasets/: USairport500-uniform-fast.txt  USairport500-uniform.txt
src/: GraphTransformations.cpp  GraphTransformations.h  graph.cpp  graph.h
src/experiment/: MBExperimentClassic.cpp  MBExperimentCompareTime.cpp  MBExperimentFast.cpp  MBExperimentFirstAndBFS.cpp  MBExperimentFordBellmanApprox.cpp  MBExperimentPrepareApproximations.cpp
src/mb/: MetricBackbone.cpp  MetricBackbone.h
src/mb/algo/: MBApproximationAlgorithm.cpp  MBApproximationAlgorithm.h  MBApproximationDijkstraAlgorithm.cpp  MBApproximationDijkstraAlgorithm.h  MBApproximationFordBellmanAlgorithm.cpp  MBApproximationFordBellmanAlgorithm.h  MBCalculationAlgorithm.h  MBClassicAlgorithm.cpp  MBClassicAlgorithm.h  MBFastAlgorithm.cpp  MBFastAlgorithm.h  MBFastCommon.h  MBFirstAndBFSAlgorithm.cpp  MBFirstAndBFSAlgorithm.h
